Edited the about page

--- a/about.html
+++ b/about.html
@@ -1,4 +1,7 @@
 <html>
     <head><title>About</title></head>
-    <body><h1>About Page</h1></body>
+    <body>
+        <h1>About Page</h1>
+        This is the about page
+    </body>
 </html>
